<resources>
    //Header
    <string name="app_name">KCTT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    //Register
    <string name="create_account_text">Create Account</string>
    <string name="sign_up_text">Sign up to get started!</string>
    <string name="username_title">Username</string>
    <string name="username_hint">Username</string>
    <string name="email_title">E-mail</string>
    <string name="email_hint">Email Address</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_in_msg">I am already a member.</string>
    <string name="sign_in_text_button">Sign In</string>

    //Login
    <string name="welcome_text">Welcome</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_msg">Do not have an account?</string>
    <string name="sign_up_text_button">Sign Up</string>

    //Forget Password
    <string name="forgot_password_msg">Please enter your email address and we will let you reset your password.</string>

    //Forget Password Continue
    <string name="tac">TAC</string>
    <string name="tac_hint">TAC code</string>

    //Reset Password
    <string name="reset_password_text">Reset Password</string>
    <string name="reset_password_msg">Please enter your new password to reset password.</string>
    <string name="new_password_text">New Password</string>
    <string name="current_password_title">Current Password</string>

    <string name="register_new_material">register new material</string>
    <string name="title_activity_material_list">MaterialList</string>
    <string name="registerMT">Register Material Type</string>
    <string name="string_registermt">Register Material type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="material_idN">Material ID</string>
    <string name="material_product_id">Material Product ID</string>
    <string name="material_nameN">Material Name</string>
    <string name="welcome_to_pop_up">Welcome to Pop up</string>

    <string name="monthly_stock_report">Monthly Stock Report</string>
    <string name="product_id">Product ID</string>
    <string name="stock_in">Stock In</string>
    <string name="stock_out">Stock Out</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>